Added mdel-en documentation fixed links in summary report dataset

--- a/APIDocumentation/mdel-dataset-en.html
+++ b/APIDocumentation/mdel-dataset-en.html
@@ -362,7 +362,7 @@
                                             <th scope="col">Link</th>
                                         </tr>
                                     </thead><!-- Snippet package/snippets/resource_item.html start -->
-                                    <!--Licence-->
+                                    <!--    localhost:17640/    -->
                                     <tr>
                                         <td>Company</td>
                                         <td>Dataset</td>
